[package]
name = "audio-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serenity = { version = "0.12", features = ["voice", "gateway", "model", "client", "cache", "rustls_backend", "collector"] }
songbird = { version = "0.5", features = ["receive"], default-features = true }
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "alac"], default-features = true }
tokio = { version = "1", features = ["full"] }
url = "2.5"
serde = "1"
serde_json = "1"
anyhow = "1"
dashmap = "6.1.0"
hound = "3.5.1"
chrono = "0.4.40"
